cleans up various alignment and layout issues

--- a/public/resources/css/module/_dropdown.scss
+++ b/public/resources/css/module/_dropdown.scss
@@ -12,6 +12,7 @@
     cursor: pointer;
     position: relative;
     z-index: $layer-1;
+    opacity: 0.87;
 
     .icon {
       position: absolute;
@@ -31,6 +32,8 @@
     left: 0px;
     z-index: $layer-5;
     display: none;
+    border-radius: 3px;
+    overflow: hidden;
 
     ul {
       list-style-type: none;
