--- a/public/resources/css/module/_hero.scss
+++ b/public/resources/css/module/_hero.scss
@@ -1,4 +1,4 @@
-$hero-padding: $unit * 2;
+$hero-padding: ($unit * 10) ($unit * 6) ($unit * 5);
 
 .hero {
   position: relative;
@@ -14,6 +14,7 @@ $hero-padding: $unit * 2;
 
   &.is-large {
     height: 478px;
+    padding-top: ($unit * 2);
     text-align: center;
 
     @media handheld and (max-width: $phone-breakpoint),
@@ -25,7 +26,7 @@ $hero-padding: $unit * 2;
 
   .hero-title {
     text-transform: uppercase;
-    margin: ($unit * 9) 0px 0px ($unit * 10);
+    margin: 0;
     opacity: .87;
 
     &.is-standard-case {
@@ -40,8 +41,8 @@ $hero-padding: $unit * 2;
   }
 
   .hero-subtitle {
-    margin: 0px 0px 0px ($unit * 10);
-    opacity: .87;
+    margin: 0;
+    opacity: 1;
 
     @media handheld and (max-width: $phone-breakpoint),
     screen and (max-device-width: $phone-breakpoint),
